sprint-estimator/main/default/objects/Sprint_Resource__c/Sprint_Resource__c.object-meta.xml
<CustomObject>
    <label>Sprint Resource</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Sprint Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sprint Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>