sprint-estimator/main/default/objects/Sprint_Resource__c/fields/Avg_Points_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Avg_Points_Per_Day__c</fullName>
    <description>Average points per build day at 100% allocation</description>
    <inlineHelpText>Average points per build day at 100% allocation</inlineHelpText>
    <label>Avg Points Per Day</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>