sprint-estimator/main/default/objects/Sprint_Resource__c/fields/Number_of_Resources__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Resources__c</fullName>
    <description>Total number of resources for the specified role allocated</description>
    <inlineHelpText>Total number of resources for the specified role allocated</inlineHelpText>
    <label>Number of Resources</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>