sprint-estimator/main/default/objects/Sprint_Resource__c/fields/Percent_of__c.field-meta.xml
<CustomField>
    <fullName>Percent_of__c</fullName>
    <description>Percent per role allocated</description>
    <label>Percent per Role</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>