sprint-estimator/main/default/objects/Sprint_Resource__c/fields/Sprint_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Estimate__c</fullName>
    <label>Sprint Estimate</label>
    <referenceTo>Sprint_Estimate__c</referenceTo>
    <relationshipLabel>Sprint Resources</relationshipLabel>
    <relationshipName>Sprint_Resources</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>