sprint-estimator/main/default/objects/Sprint_Resource__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Number_of_Resources__c</columns>
    <columns>Avg_Points_Per_Day__c</columns>
    <columns>Percent_of__c</columns>
    <columns>Calculated_Points_Per_Build_Day__c</columns>
    <columns>Resource_Name__c</columns>
    <columns>Sprint_Estimate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>